Corrected image lines using correct slashes and folder level

--- a/learning/courses/quantum-machine-learning/classical-ml-review.ipynb
+++ b/learning/courses/quantum-machine-learning/classical-ml-review.ipynb
@@ -27,13 +27,13 @@
     "2.\t__Unsupervised learning:__ In contrast to supervised learning, unsupervised learning uses unlabeled data to train the machine learning model. The goal of such algorithms is to discover hidden patterns and structure in data. Some algorithms in this class are clustering and dimensionality reduction algorithms. Some generative models such as generative adversarial networks and variational autoencoders can also be considered in this category.\n",
     "3.\t__Reinforcement learning:__ Algorithms in this machine learning category are defined by an agent which interacts with an environment. The agent takes actions and receives feedback from its environment in the form of rewards and punishments. Eventually through this feedback mechanism, the agent learns to take the correct set of actions to perform a specific task .\n",
     "\n",
-    "![QML\\_CR\\_background\\_Sup\\_Unsup-2.svg](\\public\\learning\\images\\courses\\Quantum-machine-learning\\Classical-ML-review\\QML_CR_background_Sup_Unsup.svg)\n",
+    "![A diagrammatic representation of supervised and unsupervised learning.](/learning/images/courses/quantum-machine-learning/QML_CR_background_Sup_Unsup.svg)\n",
     "\n",
     "### Introducing “quantum” to machine learning\n",
     "\n",
     "We can now start exploring how “quantum” is introduced into machine learning. In this broader categorization, we consider the type of model/algorithm on the processing device, as well as the type of data provided into it. The picture above summarizes these possible combinations.\n",
     "\n",
-    "![CCCQQCQQ\\_Quadrants\\_CP.svg](public\\learning\\images\\courses\\Quantum-machine-learning\\Classical-ML-review\\CCCQQCQQ_Quadrants_CP.svg)\n",
+    "![A diagram showing quadrants with algorithms on one axis and data on the other, where each can be quantum or classical in nature.](/learning/images/courses/quantum-machine-learning/CCCQQCQQ_Quadrants_CP.svg)\n",
     "\n",
     "For instance, CC means that we have a classical dataset – such as images, sound, or text that we can store on classical computers - and that we also use a classical computer to run a machine learning algorithm. This is precisely the classical machine learning setting. On the other hand, QQ means that we are using a quantum computer to process quantum data. Here, “quantum data” could mean several things, and could be context-dependent. Quantum data could be thought of as a set of measurement outcomes obtained from a quantum device, or it could refer to states that have been prepared on a quantum computer by another algorithm. In the future, it could even refer to data stored in QRAM (i.e. Quantum Random Access Memory), which does not currently exist. When researchers talk about quantum machine learning, they usually refer to the CQ regime, where the dataset at hand is classical and the processing device executing the machine learning algorithm is a quantum computer. In the following parts of the course, we will focus on such algorithms.\n",
     "\n",
@@ -41,7 +41,7 @@
     "\n",
     "We now recap a class of algorithms called support vector machines from a classical machine learning point of view. Later we will show how to bring quantum computing into this algorithm.\n",
     "\n",
-    "![SVM\\_CP.svg](public\\learning\\images\\courses\\Quantum-machine-learning\\Classical-ML-review\\SVM_CP.svg)\n",
+    "![A diagram of a support vector machine.](/learning/images/courses/quantum-machine-learning/SVM_CP.svg)\n",
     "\n",
     "Let’s suppose a task of binary classification on a dataset with 2-dimensional feature space as shown in the plot. One thing we can do to perform classification for this dataset is to find a line, or in general a hyperplane that separates the two classes. In practice we can find infinitely many separating hyperplanes, so the question is: how do we define the optimal one? The idea here is that a particularly good decision boundary should maximize the margin, which is defined as the distance to the nearest points in each class. In this setting, the data points with the smallest distance to the decision boundary are called support vectors.\n",
     "\n",
@@ -66,7 +66,7 @@
     "\n",
     "The video below motivates how quantum can play a role in linear classifiers. This is described in greater detail in the text.\n",
     "\n",
-    "<ImageLink title = \"Quantum kernels\" alt = \"kernel video thumbnail\" href = \"https://video.ibm.com/recorded/134355928\" src = \"\\learning\\images\\courses\\Quantum-machine-learning\\Classical-ML-review\\CML-review-kernel-thumb.svg\">\n",
+    "<ImageLink title = \"Quantum kernels\" alt = \"kernel video thumbnail\" href = \"https://video.ibm.com/recorded/134355928\" src = \"/learning/images/courses/quantum-machine-learning/CML-review-kernel-thumb.svg\">\n",
     "\n",
     "\n",
     "### Moving to higher dimensional spaces\n",
@@ -75,7 +75,7 @@
     "\n",
     "Graphically, one can easily see how we can generalize the SVM approach to cases where the original data are not linearly separable, given the right mapping to higher dimensions. Looking at the 2-dimensional data on the left, we can see that there is no linear decision boundary that can separate the two classes. However, we can consider adding a third feature to our feature space. If this new feature is - for instance - the product of the previous two features $x_1$ and $x_2$, then the data becomes linearly separable. This also means that we can run the support vector machine algorithm successfully now on this higher dimensional feature space.\n",
     "\n",
-    "![QML\\_CR\\_background\\_2D-3D.png](public\\learning\\images\\courses\\Quantum-machine-learning\\Classical-ML-review\\QML_CR_background_2D-3D.svg)\n",
+    "![A diagram showing a ring of one data type with a second data type filling in the middle of the ring. A second cell shows the data projected into 3D, as in a bowl shape. Now the data are linearly separable.](/learning/images/courses/quantum-machine-learning/QML_CR_background_2D-3D.svg)\n",
     "\n",
     "We also denote this “feature mapping” $\\Phi$. The feature map often maps from the space of input data to a higher dimension, as is shown here, but there are models and algorithms that make use of mappings to lower dimensions. The mapping to higher dimensions is simply an easy case to visualize and understand.\n",
     "\n",
@@ -111,7 +111,7 @@
     "\n",
     "Quantum computers, or quantum states in general, allow for a very natural definition of “quantum kernel”. We can interpret the encoding of an input $\\vec{x}$ into a quantum state $|\\Phi(\\vec{x})\\rangle$ as a feature map. This process may indeed map the data into a very high-dimensional space as is common in classical feature maps, but the dimensionality will depend on the encoding method (see the next lesson in this course). Recall that the inner product of two quantum states $\\langle \\psi | \\phi \\rangle$ is related to the probability of measuring the state $|\\phi\\rangle$ when in the state $|\\psi\\rangle$.measurement probability, we can estimate the inner product of the two mapped data points $\\vec{\\Phi}(\\vec{x}_i)$ and $\\vec{\\Phi}(\\vec{x}_j)$ by making sufficiently many measurements of the resulting circuit.\n",
     "\n",
-    "![Classical\\_Review\\_background\\_kernel\\_circuit.png](public\\learning\\images\\courses\\Quantum-machine-learning\\Classical-ML-review\\Classical_Review_background_kernel_circuit.svg)\n",
+    "![An abstract representation of a kernal as a circuit.](/learning/images/courses/quantum-machine-learning/Classical_Review_background_kernel_circuit.svg)\n",
     "\n",
     "As we will see later in the course, we can use measurements on a quantum circuit like the one shown above to estimate a kernel, and we can then run SVM optimization classically on the kernel matrix to learn the tunable parameters."
    ]
@@ -175,7 +175,7 @@
     "- So as in the classical NN, we have both linear and non-linear components\n",
     "- The weight circuits still have variational parameters, so there is still a classical minimization to be carried out.\n",
     "\n",
-    "![QML\\_CR\\_background\\_QNN\\_ex\\_circuit.png](public\\learning\\images\\courses\\Quantum-machine-learning\\Classical-ML-review\\QML_CR_background_QNN_ex_circuit.svg)\n",
+    "![A representation of a quantum neural network as a circuit.](/learning/images/courses/quantum-machine-learning/QML_CR_background_QNN_ex_circuit.svg)\n",
     "\n",
     "We can use a circuit like that above to calculate a function\n",
     "$$f_{QNN}(x) = \\langle 0|U^{\\dagger}(X)W^{\\dagger}OWU(x)|0\\rangle $$\n",
@@ -185,9 +185,7 @@
     "\n",
     "We can now look at one of the ways of constructing the quantum counterpart of a neural network. In this model, the information flow is different from a classical feed-forward neural network. In the classical setting, information would flow from left to right, starting with the input and ending with the model output, and in the reverse direction when doing backpropagation to train the model.\n",
     "\n",
-    "![alt text](../../../public/learning/images/courses/Quantum-machine-learning/Classical-ML-review/VQC_layers_Meltem.svg)\n",
-    "\n",
-    "![VQC\\_layers\\_Meltem.png](public\\learning\\images\\courses\\Quantum-machine-learning\\Classical-ML-review\\VQC_layers_Meltem.svg)\n",
+    "![A diagram showing several layers of gates within a quantum neural network](/learning/images/courses/quantum-machine-learning/VQC_layers_Meltem.svg)\n",
     "\n",
     "However, in this quantum neural network construction, we see that the unitary block that encodes the data repeats itself between the variational unitary blocks with the trainable parameters. This strategy, which we refer to as “data reuploading”, is backed by interesting theoretical results. In fact, a paper by [Pérez-Salinas et al.](https://quantum-journal.org/papers/q-2020-02-06-226/) shows that, with the help of multiple data-reuploading, “a single qubit provides sufficient computational capabilities to construct a universal quantum classifier when assisted with a classical subroutine.” Therefore, data reuploading is a technique that we can use to enhance the expressiveness and representational power of the model, allowing the quantum neural network to approximate complex functions."
    ]
