Add back file management example

--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -458,9 +458,16 @@
     "file.add(\"./source_files/transpile_remote.py\")\n",
     "file.close()\n",
     "\n",
-    "# Upload the tar to Serverless data directory\n",
+    "# Get a reference to a QiskitFunction\n",
     "serverless = IBMServerlessClient()\n",
-    "serverless.file_upload(filename)"
+    "transpile_remote_demo = next(\n",
+    "    program\n",
+    "    for program in serverless.list()\n",
+    "    if program.title == \"transpile_remote_serverless\"\n",
+    ")\n",
+    "\n",
+    "# Upload the tar to Serverless data directory\n",
+    "serverless.file_upload(file=filename, function=transpile_remote_demo)"
    ]
   },
   {
@@ -478,7 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serverless.files()"
+    "serverless.files(function=transpile_remote_demo)"
    ]
   },
   {
