Corrected image links in all notebooks

--- a/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
+++ b/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "Note that in order to calculate a single kernel matrix element, we will want to encode two different points, so we can estimate their inner product. A full quantum kernel workflow will of course, involve many such inner products between mapped data vectors, as well as classical machine learning methods. But the core step being iterated is the estimation of a single kernel matrix element. For this we select a data-dependent quantum circuit and map two data vectors into the feature space.\n",
     "\n",
-    "![Classical_Review_background_kernel_circuit](public\\learning\\images\\courses\\Quantum-machine-learning\\Quantum-kernel-methods\\Classical_Review_background_kernel_circuit.svg)\n",
+    "![Classical_Review_background_kernel_circuit](public\\learning\\images\\courses\\Quantum-machine-learning\\quantum-kernel-methods\\Classical_Review_background_kernel_circuit.svg)\n",
     "\n",
     "For the task of generating a kernel matrix, we are particularly interested in the probability of measuring the $|0\\rangle^{\\otimes N}$ state, in which all $N$ qubits are in the $|0\\rangle$ state. To see this, consider that the circuit responsible for encoding and mapping of one data vector $\\vec{x}_i$ can be written as $\\Phi(\\vec{x}_i)$, and the one responsible for encoding and mapping $\\vec{x}_j$ is $\\Phi(\\vec{x}_j)$, and denote the mapped states\n",
     "$$\n",
@@ -441,7 +441,7 @@
     "\n",
     "It is worth noting that we used the ```ZFeatureMap``` which resulted in low two-qubit transpiled depth (depth 1, in fact). If your circuits become too deep, it is sure to result in a lot of noise, and this will make the probability of measuring the zero state very low, even if your feature map is well-matched to your data. For example, a repetition of the above process using ```ZZFeatureMap``` and ```, entanglement='linear', reps=1``` yielded ```dist.get(0,0.0) = 0.0015``` using the same data points. This is due to the much greater circuit depths and two-qubit depths from ```ZZFeatureMap```. The figure below shows the probability distribution for that calculation.\n",
     "\n",
-    "![ZZFeatureMap_Bad_Results.png](public\\learning\\images\\courses\\Quantum-machine-learning\\Quantum-kernel-methods\\ZZFeatureMap_Bad_Results.svg)\n",
+    "![ZZFeatureMap_Bad_Results.png](public\\learning\\images\\courses\\Quantum-machine-learning\\quantum-kernel-methods\\ZZFeatureMap_Bad_Results.svg)\n",
     "\n",
     "It is worth playing around with a few data points from the same category to see how low your depth must be to obtain good results. The following is rough advice that is sure to have exceptions. Generally, a two-qubit, transpiled depth of 10 or fewer should be no problem. A two-qubit, transpiled depth of 50-60 is state-of-the-art and will require advanced error mitigation among other tools. In between, your results may vary with data similarity, feature map expressivity, circuit width, and other factors."
    ]
