--- a/docs/guides/run-jobs-batch.mdx
+++ b/docs/guides/run-jobs-batch.mdx
@@ -21,7 +21,7 @@ service = QiskitRuntimeService()
 
 ## Open a batch
 
-You can open a runtime batch by using the context manager `with <Batch instance>` or by passing a `Batch` instance to the parameter `mode=` of the primitive.
+You can open a runtime batch by using the context manager `with <Batch instance>` or by passing a `Batch` instance to the primitive's `mode` parameter.  
 When you start a batch,  you must specify a QPU by passing a `backend` object.  The batch starts when its first job begins execution.
 
 
