Removed html from intro

--- a/learning/courses/quantum-machine-learning/introduction.ipynb
+++ b/learning/courses/quantum-machine-learning/introduction.ipynb
@@ -14,7 +14,7 @@
       "title": "features"
      },
      "unitary": {
-      "text": "A unitary operation is a reversible operation that preserves the norm (i.e. makes sure our probabilities always sum to 1). <a href='https://en.wikipedia.org/wiki/Unitary_matrix'>Read more</a>.",
+      "text": "A unitary operation is a reversible operation that preserves the norm (i.e. makes sure our probabilities always sum to 1). [Read more](https://en.wikipedia.org/wiki/Unitary_matrix).",
       "title": "unitary"
      }
     }
@@ -122,19 +122,17 @@
    "source": [
     "## Check-in questions\n",
     "\n",
-    "<details>\n",
-    "<summary> What makes quantum states different from classical states? </summary>\n",
-    "Answer:\n",
+    "What makes quantum states different from classical states?\n",
     "\n",
-    "A lot. Notably: complex coefficients, and superposition with a single copy. There are many other differences that will discussed in future lessons, including entanglement, and interference.</details>\n",
+    "__Answer:__\n",
     "\n",
-    "<details>\n",
-    "<summary> True or False? Highly entangled quantum states enable us to solve most machine learning problems more efficiently on a quantum computer. </summary>\n",
+    "A lot. Notably: complex coefficients, and superposition with a single copy. There are many other differences that will discussed in future lessons, including entanglement, and interference.\n",
     "\n",
-    "Answer:\n",
+    "True or False? Highly entangled quantum states enable us to solve most machine learning problems more efficiently on a quantum computer.\n",
     "\n",
-    "False. Most machine learning problems are solved very efficiently by classical algorithms and quantum algorithms are not likely to offer any substantial speed-up. The goal in QML is to finding datasets with features that are well-described by quantum states and/or to find mappings of data features that optimize the accuracy of models.\n",
-    "</details>"
+    "__Answer:__\n",
+    "\n",
+    "False. Most machine learning problems are solved very efficiently by classical algorithms and quantum algorithms are not likely to offer any substantial speed-up. The goal in QML is to finding datasets with features that are well-described by quantum states and/or to find mappings of data features that optimize the accuracy of models.\n"
    ]
   },
   {
@@ -349,12 +347,11 @@
    "source": [
     "## Check-in questions\n",
     "\n",
-    "<details>\n",
-    "<summary> In the process above, we calculated a kernel matrix entry for the 14th and 19th data points. What value should we obtain if we use the same data point twice, here (like 14th and 14th again)? In other words, what should be the diagonal entries in the kernel matrix? Answer this question in the absence of noise, but note that deviations from your answer are possible in the presence of noise.</summary>\n",
+    "In the process above, we calculated a kernel matrix entry for the 14th and 19th data points. What value should we obtain if we use the same data point twice, here (like 14th and 14th again)? In other words, what should be the diagonal entries in the kernel matrix? Answer this question in the absence of noise, but note that deviations from your answer are possible in the presence of noise.\n",
     "\n",
-    "Answer:\n",
+    "__Answer:__\n",
     "\n",
-    "The diagonals should be 1.0. This process should be calculating the normalized inner product of a vector with itself, which must always be one.</details>"
+    "The diagonals should be 1.0. This process should be calculating the normalized inner product of a vector with itself, which must always be one."
    ]
   }
  ],
