Removed html from QKernels

--- a/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
+++ b/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
@@ -461,23 +461,23 @@
    "source": [
     "### Check-in Questions\n",
     "\n",
-    "<details>\n",
-    "<summary> In a 10-qubit quantum circuit, generally, how many different states are there that could possibly be measured? </summary>\n",
-    "Answer:\n",
+    "__Q:__ In a 10-qubit quantum circuit, generally, how many different states are there that could possibly be measured?\n",
     "\n",
-    "$10^10$ or 10 billion.</details>\n",
+    "__Answer:__\n",
     "\n",
-    "<details>\n",
-    "<summary> Let us suppose that someone new to quantum computing attempts to use a quantum circuit that has very high two-qubit depth, and they do not use error mitigation. Let us further suppose that this results in an error rate of 10% on each qubit. If the true (error-free) kernel matrix element corresponding to this circuit is very large, say 1.0, what would be the probability of measuring all 10 qubits to be in the state with every qubit |0>? </summary>\n",
-    "Answer:\n",
+    "$10^{10}$ or 10 billion.\n",
     "\n",
-    "The probability of each qubit being correctly found in the |0> state is 0.90. The probability for all 10 qubits to be found in the correct state is $0.90^10$ or about 35%</details>\n",
+    "__Q:__ Let us suppose that someone new to quantum computing attempts to use a quantum circuit that has very high two-qubit depth, and they do not use error mitigation. Let us further suppose that this results in an error rate of 10% on each qubit. If the true (error-free) kernel matrix element corresponding to this circuit is very large, say 1.0, what would be the probability of measuring all 10 qubits to be in the state with every qubit |0>?\n",
     "\n",
-    "<details>\n",
-    "<summary> Explain in your own words why it is so important to monitor circuit depths. This is true generally, but explain it in the context of quantum kernel estimation. </summary>\n",
-    "Answer:\n",
+    "__Answer:__\n",
     "\n",
-    "In this QKE workflow, our estimates are based on the measurements of the zero state, meaning the state in which every qubit is found in the |0> state. Very deep circuits will introduce high error rates. When that error rate is compounded over many qubits, this will reduce the probability of measuring the zero state, substantially. </details>"
+    "The probability of each qubit being correctly found in the |0> state is 0.90. The probability for all 10 qubits to be found in the correct state is $0.90^10$ or about 35%.\n",
+    "\n",
+    "__Q:__ Explain in your own words why it is so important to monitor circuit depths. This is true generally, but explain it in the context of quantum kernel estimation.\n",
+    "\n",
+    "__Answer:__\n",
+    "\n",
+    "In this QKE workflow, our estimates are based on the measurements of the zero state, meaning the state in which every qubit is found in the $|0\\rangle$ state. Very deep circuits will introduce high error rates. When that error rate is compounded over many qubits, this will reduce the probability of measuring the zero state, substantially."
    ]
   },
   {
