Write example program to separate file

--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -80,11 +80,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "9e41cd2f-bce6-4c8a-8e44-537c18b3023c",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# This cell is hidden from users, it just creates a new folder\n",
+    "from pathlib import Path\n",
+    "\n",
+    "Path(\"./source_files\").mkdir(exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "a69df8bc-5033-45bf-a837-cffa9d29b844",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%writefile ./source_files/status_example.py\n",
+    "\n",
     "from qiskit_serverless import update_status, Job\n",
     "\n",
     "## If your function has a mapping stage, particularly application functions, you can set the status to \"RUNNING: MAPPING\" as follows:\n",
@@ -126,23 +145,6 @@
     "<CloudContent>\n",
     "The following code requires that you have already [saved your credentials](/docs/guides/cloud-setup).\n",
     "</CloudContent>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "9e41cd2f-bce6-4c8a-8e44-537c18b3023c",
-   "metadata": {
-    "tags": [
-     "remove-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# This cell is hidden from users, it just creates a new folder\n",
-    "from pathlib import Path\n",
-    "\n",
-    "Path(\"./source_files\").mkdir(exist_ok=True)"
    ]
   },
   {
