--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -35,19 +35,9 @@
     "We recommend using these versions or newer.\n",
     "\n",
     "```\n",
-    "qiskit[all]~=1.3.1\n",
-    "qiskit-ibm-runtime~=0.34.0\n",
-    "qiskit-aer~=0.15.1\n",
-    "qiskit-serverless~=0.18.0\n",
-    "qiskit-ibm-catalog~=0.2\n",
-    "qiskit-addon-sqd~=0.8.1\n",
-    "qiskit-addon-utils~=0.1.0\n",
-    "qiskit-addon-mpf~=0.2.0\n",
-    "scipy~=1.14.1\n",
-    "qiskit-addon-aqc-tensor~=0.1.2\n",
-    "qiskit-addon-obp~=0.1.0\n",
-    "scipy~=1.14.1\n",
-    "pyscf~=2.7.0\n",
+    "qiskit[all]~=2.0.0\n",
+    "qiskit-ibm-runtime~=0.37.0\n",
+    "qiskit-serverless~=0.22.0\n",
     "```\n",
     "</details>"
    ]
@@ -80,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9e41cd2f-bce6-4c8a-8e44-537c18b3023c",
    "metadata": {
     "tags": [
@@ -97,10 +87,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a69df8bc-5033-45bf-a837-cffa9d29b844",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing ./source_files/status_example.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile ./source_files/status_example.py\n",
     "\n",
@@ -157,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ./source_files/transpile_remote.py\n"
+      "Writing ./source_files/transpile_remote.py\n"
      ]
     }
    ],
@@ -281,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "df28a92c-3585-49f0-a2ea-828a34638684",
    "metadata": {
     "tags": [
@@ -293,13 +291,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waiting for job (status 'QUEUED')\n",
-      "Waiting for job (status 'QUEUED')\n",
-      "Waiting for job (status 'QUEUED')\n",
-      "Waiting for job (status 'QUEUED')\n",
-      "Waiting for job (status 'INITIALIZING')\n",
-      "Waiting for job (status 'RUNNING: OPTIMIZING_FOR_HARDWARE')\n",
-      "Waiting for job (status 'RUNNING: OPTIMIZING_FOR_HARDWARE')\n",
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING: OPTIMIZING_FOR_HARDWARE')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Job completed successfully\n"
      ]
     }
@@ -372,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "cea90969-cfbf-4181-9ffa-524f3709dc69",
    "metadata": {},
    "outputs": [
@@ -397,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "55163053-2cd8-4e5d-8470-d08055a6f401",
    "metadata": {
     "tags": [
@@ -409,14 +442,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waiting for job (status 'QUEUED')\n",
-      "Waiting for job (status 'QUEUED')\n",
-      "Waiting for job (status 'QUEUED')\n",
-      "Waiting for job (status 'QUEUED')\n",
-      "Waiting for job (status 'QUEUED')\n",
-      "Waiting for job (status 'INITIALIZING')\n",
-      "Waiting for job (status 'RUNNING')\n",
-      "Waiting for job (status 'RUNNING: OPTIMIZING_FOR_HARDWARE')\n",
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING: OPTIMIZING_FOR_HARDWARE')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING: OPTIMIZING_FOR_HARDWARE')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING: OPTIMIZING_FOR_HARDWARE')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING: OPTIMIZING_FOR_HARDWARE')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Job completed successfully\n"
      ]
     }
@@ -446,10 +541,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0183278f-8ce3-4466-9255-097b2d211052",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"message\":\"/usr/src/app/media/5e1f442128cdf60018496a04/transpile_demo.tar\"}'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import tarfile\n",
     "from qiskit_serverless import IBMServerlessClient\n",
@@ -482,10 +588,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "14241fc4-d0cb-4803-8752-a460e1f48708",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['classifier_name.pkl.tar', 'output.json.tar', 'transpile_demo.tar']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "serverless.files(function=transpile_remote_demo)"
    ]
