--- a/docs/tutorials/ai-transpiler-introduction.ipynb
+++ b/docs/tutorials/ai-transpiler-introduction.ipynb
@@ -1124,7 +1124,7 @@
    "version": "3"
   },
   "platform": "cloud",
-  "title": "AI Transpiler Introduction"
+  "title": "Qiskit AI-powered transpiler service introduction"
  },
  "nbformat": 4,
  "nbformat_minor": 4
