--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -236,26 +236,30 @@ Improvements include the following:
   - `RUNNING`: the workload is currently running on classical resources
   - `DONE`: the workload has successfully completed
 
-  Now, you can also set custom statuses that further describe the specific workflow stage, as follows:
+  Now, you can also set custom statuses that further describe the specific workflow stage as in the following example.
 
-  ```python
-  from qiskit_serverless import update_status, Job
-  
-  ## If your function has a mapping stage, particularly application functions, you can set the status to "RUNNING: MAPPING" as follows:
-  update_status(Job.MAPPING)
-  
-  ## While handling transpilation, error suppression, and so forth, you can set the status to "RUNNING: OPTIMIZING_FOR_HARDWARE":
-  update_status(Job.OPTIMIZING_HARDWARE)
-  
-  ## After you submit jobs to Qiskit Runtime, the underlying quantum job will be queued. You can set status to "RUNNING: WAITING_FOR_QPU":
-  update_status(Job.WAITING_QPU)
-  
-  ## When the Qiskit Runtime job starts running on the QPU, set the following status "RUNNING: EXECUTING_QPU":
-  update_status(Job.EXECUTING_QPU)
-  
-  ## Once QPU is completed and post-processing has begun, set the status "RUNNING: POST_PROCESSING":
-  update_status(Job.POST_PROCESSING)
-  ```
+    <details>
+  <summary><b>Code example</b></summary>
+
+    ```python
+    from qiskit_serverless import update_status, Job
+    
+    ## If your function has a mapping stage, particularly application functions, you can set the status to "RUNNING: MAPPING" as follows:
+    update_status(Job.MAPPING)
+    
+    ## While handling transpilation, error suppression, and so forth, you can set the status to "RUNNING: OPTIMIZING_FOR_HARDWARE":
+    update_status(Job.OPTIMIZING_HARDWARE)
+    
+    ## After you submit jobs to Qiskit Runtime, the underlying quantum job will be queued. You can set status to "RUNNING: WAITING_FOR_QPU":
+    update_status(Job.WAITING_QPU)
+    
+    ## When the Qiskit Runtime job starts running on the QPU, set the following status "RUNNING: EXECUTING_QPU":
+    update_status(Job.EXECUTING_QPU)
+    
+    ## Once QPU is completed and post-processing has begun, set the status "RUNNING: POST_PROCESSING":
+    update_status(Job.POST_PROCESSING)
+    ```
+  </details>
 
 <span id="latest-qiskit-functions"></span>
 ## Qiskit Functions
@@ -271,8 +275,10 @@ Improvements include the following:
     - `RUNNING: WAITING_FOR_QPU`
     - `RUNNING: EXECUTING_QPU`
     - `RUNNING: POST_PROCESSING`
-  - Finally, after a Qiskit Function is complete, you can inspect how much time is spent across each stage with `job.result()['metadata']['resource_usage']`:
+  - Finally, after a Qiskit Function is complete, you can inspect how much time is spent across each stage with `job.result()['metadata']['resource_usage']`, as in the following example.
 
+  <details>
+  <summary><b>Code example</b></summary>
   ```json
   {
         ...,
@@ -310,6 +316,8 @@ Improvements include the following:
   }
   ```
 
+  </details>
+  
   We're hoping these changes make it easier to use Qiskit Functions, and [you can get started with free trials in the catalog today.](https://quantum.cloud.ibm.com/functions)
 
 <details>
