Add link to Serverless at top

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -20,7 +20,7 @@ For all product announcements, visit the [Announcements](https://docs.quantum.ib
 Jump to [IBM Quantum Platform](#latest-platform) | [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime client](#latest-qiskit-runtime) | [Qiskit Runtime service](#latest-runtime-service) | [Qiskit Transpiler Service](#latest-qiskit-transpiler-service) | [Qiskit Functions](#latest-qiskit-functions) | [Documentation](#latest-docs)
 </CloudContent>
 <LegacyContent>
-Jump to [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime client](#latest-qiskit-runtime) | [Qiskit Runtime service](#latest-runtime-service) | [Qiskit Transpiler service](#latest-qiskit-transpiler-service) | [Qiskit Functions](#latest-qiskit-functions) | [Documentation](#latest-docs)
+Jump to [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime client](#latest-qiskit-runtime) | [Qiskit Runtime service](#latest-runtime-service) | [Qiskit Transpiler service](#latest-qiskit-transpiler-service) | [Qiskit Serverless](#latest-qiskit-serverless) | [Qiskit Functions](#latest-qiskit-functions) | [Documentation](#latest-docs)
 </LegacyContent>
 
 <CloudContent>
@@ -223,6 +223,7 @@ Improvements include the following:
   - The Qiskit Transpiler Service leverages IBM Cloud&reg; resources to provide users with the latest transpilation capabilities from the Qiskit SDK. It offers a Python library that helps users seamlessly integrate the service into their current Qiskit patterns and workflows. Perhaps most importantly, the service invites users to experiment with new and improved AI-powered transpiler passes — cutting-edge tools that might be faster and produce better results than traditional transpilation methods. Read the [blog](https://www.ibm.com/quantum/blog/ai-transpiler-passes) for more information.
 </details>
 
+<span id="latest-qiskit-serverless"></span>
 ## Qiskit Serverless
 
 **15 May 2025**
@@ -236,7 +237,7 @@ Improvements include the following:
   - `RUNNING`: the workload is currently running on classical resources
   - `DONE`: the workload has successfully completed
 
-  Now, you can also set custom statuses that further describe the specific workflow stage as in the following example.
+  Now, you can also set custom statuses that further describe the specific workflow stage, as in the following example.
 
     <details>
   <summary><b>Code example</b></summary>
@@ -317,7 +318,7 @@ Improvements include the following:
   ```
 
   </details>
-  
+
   We're hoping these changes make it easier to use Qiskit Functions, and [you can get started with free trials in the catalog today.](https://quantum.cloud.ibm.com/functions)
 
 <details>
