--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -240,7 +240,7 @@ Improvements include the following:
   Now, you can also set custom statuses that further describe the specific workflow stage, as in the following example.
 
     <details>
-  <summary><b>Code example</b></summary>
+  <summary><b>Expand for code example</b></summary>
 
     ```python
     from qiskit_serverless import update_status, Job
@@ -279,7 +279,7 @@ Improvements include the following:
   - Finally, after a Qiskit Function is complete, you can inspect how much time is spent across each stage with `job.result()['metadata']['resource_usage']`, as in the following example.
 
   <details>
-  <summary><b>Code example</b></summary>
+  <summary><b>Expand for code example</b></summary>
   ```json
   {
         ...,
