Remove rogue marks introduced during code review

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -234,7 +234,7 @@ Improvements include the following:
   Serverless workloads have several stages across a workflow. By default, the following statuses are viewable with `job.status()`:
 
   - `QUEUED`: The workload is queued for classical resources.
-  - `INITIALIZING`: The workload is set up.```
+  - `INITIALIZING`: The workload is set up.
   - `RUNNING`: The workload is currently running on classical resources.
   - `DONE`: The workload has successfully completed.
 
